Changing the second line to red

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 		<h1 style="color:blue">This is an empty page</h1>
-		<h2>Test page</h2>
+		<h2 style="color:red">Test page</h2>
 	</body>
 </html>
