--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Start Page</title>
+		<title>Qutations</title>
 	</head>
 	<body>
 		<h1 style="color:blue">This is an empty page</h1>
